tests/ui/dep-graph/dep-graph-assoc-type-codegen.stderr
error: OK
  --> $DIR/dep-graph-assoc-type-codegen.rs:29:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: aborting due to 1 previous error

